--- a/coordinates/style.css
+++ b/coordinates/style.css
@@ -10,27 +10,21 @@ body {
 .col {
   height: 100%;
   width: 1px;
-  left: 50%;
 }
 
 .row {
   width: 100%;
   height: 1px;
-  top: 50%;
 }
 
 .target {
   position: absolute;
-  top: 50%;
-  left: 50%;
   transform: translate(-50%, -50%);
 }
 
 .tag {
   color: white;
   position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(20px, 20px);
+  margin: 20px;
   font-size: 35px;
 }
